--- a/site/public/beecorp.html
+++ b/site/public/beecorp.html
@@ -11,8 +11,7 @@
     </style>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=00e4d7a2-93fc-4264-9687-178ce11167fb"> </script>
-  </head>
-  <body>
+    <body>
     <div class="header">
       <a class="logo"><span style="color:#f19953">Bee</span>Corp</a>
       <ul class="navbar">
@@ -91,7 +90,7 @@
     </div>
   </div>
 
-  <div  id="faleconosco"class="fale_conosco">
+  <!-- <div  id="faleconosco"class="fale_conosco">
     <div class="container">
         <div class="ui_content">
             <p>
@@ -119,7 +118,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <div class="footer">
         <h1><span style="color:#f19953">Bee</span>Corp</h1>
