--- a/site/public/pagina_login.html
+++ b/site/public/pagina_login.html
@@ -125,10 +125,11 @@
                     console.log(json);
                     console.log(JSON.stringify(json));
 
-                    sessionStorage.EMAIL_USUARIO = json.email;
+                    sessionStorage.EMAIL_USUARIO = json.Email;
                     sessionStorage.NOME_USUARIO = json.Nome;
-                    sessionStorage.ID_USUARIO = json.id;
-
+                    sessionStorage.ID_USUARIO = json.idUsuario;
+                  
+                  
                     if(json.fkChefe == null){
                       sessionStorage.ADM = -1
                     }else{
