mudança na api do chartjs

--- a/site/public/cadastro_chefe.html
+++ b/site/public/cadastro_chefe.html
@@ -53,6 +53,7 @@
                     <input type="password" id="input_senha">
                     <div class="btn">
                     <button class="button_dashboard" onclick="cadastrarFuncionario()">Atualizar</button>
+                    <button class="button_dashboard"><a href="dashboard.html">Colméias</a></button>
                     </div>
                 </div>
             </div>
