--- a/site/public/perfil_chefe.html
+++ b/site/public/perfil_chefe.html
@@ -19,7 +19,7 @@
                 <span id="nomeUsuario"></span>
             </div>
             <div class="btn" id="buttons">
-                <button class="button_dashboard"><a href="#">Colméias</a></button>
+                <button class="button_dashboard"><a href="dashboard.html">Colméias</a></button>
             </div>
         </div>
         <div class="container">
