--- a/site/public/colmeia1.html
+++ b/site/public/colmeia1.html
@@ -90,7 +90,7 @@
             label: 'Temperatura',
             backgroundColor: '#814C1B',
             borderColor: '#814C1B',
-            data: [33, 34, 32, 35, 34, 33, 30, 28, 29, 33, 45],
+            data: [],
         },
         {
             label: 'Temperatura Ideal',
@@ -107,12 +107,12 @@
         data: data_line,
         options: {}
     };
-
+/* 
     const config_bar = {
         type:'line',
-        data: data_bar,
+        data: data_line,
         options: {}
-    };
+    }; */
 
 </script>
 <script>
@@ -133,10 +133,10 @@ b_usuario.innerHTML = sessionStorage.NOME_USUARIO;
 
 verificar_autenticacao();
 
-function alterarTitulo(idDados) {
+/* function alterarTitulo(idDados) {
     var tituloBeecorp = document.getElementById("tituloBeecorp")
     tituloBeecorp.innerHTML = "Últimas medidas de Temperatura da <span style='color: #e6005a'>Colméia " + idDados + "</span>"
-}
+} */
 
 // O gráfico é construído com três funções:
 // 1. obterDadosGrafico -> Traz dados do Banco de Dados para montar o gráfico da primeira vez
@@ -150,7 +150,7 @@ function alterarTitulo(idDados) {
 //     Se quiser alterar a busca, ajuste as regras de negócio em src/controllers
 //     Para ajustar o "select", ajuste o comando sql em src/models
 function obterDadosGrafico(idDados) {
-    alterarTitulo(idDados)
+/*     alterarTitulo(idDados) */
 
     if (proximaAtualizacao != undefined) {
         clearTimeout(proximaAtualizacao);
@@ -198,8 +198,8 @@ function obterDadosGrafico(idDados) {
 
     for (i = 0; i < resposta.length; i++) {
             var registro = resposta[i];
-            dados.labels.push(registro.momento_grafico);
-            dados.datasets[0].data.push(registro.temperatura);
+            dados.labels.push(registro.dtHora);
+            dados.datasets[0].data.push(registro.TemperaturaAtual);
         }
 
         console.log(JSON.stringify(dados));
@@ -253,13 +253,13 @@ function obterDadosGrafico(idDados) {
 
                     // tirando e colocando valores no gráfico
                     dados.labels.shift(); // apagar o primeiro
-                    dados.labels.push(novoRegistro[0].momento_grafico); // incluir um novo momento
+                    dados.labels.push(novoRegistro[0].dtHora); // incluir um novo momento
                     
                     //dados.datasets[0].data.shift();  // apagar o primeiro de umidade
                   //  dados.datasets[0].data.push(novoRegistro[0].umidade); // incluir uma nova medida de umidade
                     
                     dados.datasets[0].data.shift();  // apagar o primeiro de temperatura
-                    dados.datasets[0].data.push(novoRegistro[0].temperatura); // incluir uma nova medida de temperatura
+                    dados.datasets[0].data.push(novoRegistro[0].TemperaturaAtual); // incluir uma nova medida de temperatura
 
                     window.grafico_linha.update();
 
